Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12057

Embedded server shutdown hangs in InnoDB

    XMLWordPrintable

Details

    Description

      Ever since MDEV-5800 enabled indexed virtual columns for InnoDB, the InnoDB shutdown relied on close_connections() that would set thd->killed for the InnoDB purge threads. Alas, the embedded server shutdown is not invoking close_connections(), and thus InnoDB purge threads fail to initiate shutdown, causing the embedded server to hang.
      This is repeatable at a high probability by running

      ./mtr --repeat=100 --embedded gcol.innodb_virtual_debug_purge
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: